[package]
name = "bevy_flame"
description = "bevy flame model viewer plugin"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
keywords = [
  "bevy",
  "flame",
  "head-model",
]
homepage = "https://github.com/mosure/bevy_flame"
repository = "https://github.com/mosure/bevy_flame"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]
default-run = "viewer"


[features]
default = ["windows"]

perftest = []
windows = ["ort/cuda", "ort/load-dynamic"]
web = ["bevy/webgl2"]


[dependencies]
bevy-inspector-egui = "0.24"
bevy_args = "1.3"
bevy_ort = { version = "0.12", default-features = false, features = ["flame"] }
bevy_panorbit_camera = "0.18"
clap = { version = "4.4", features = ["derive"] }
noisy_bevy = "0.6"
serde = "1.0"
serde_qs = "0.13"


[dependencies.bevy]
version = "0.13"
default-features = false


[dependencies.ort]
version = "2.0.0-rc.2"
default-features = false
features = [
  "download-binaries",
  "ndarray",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1


[lib]
path = "src/lib.rs"


[[bin]]
name = "viewer"
path = "tools/viewer.rs"
